Fixed issue with overflowing due to Projects section having too big of margin + padding. Also did some more media query changes to make it look nicer overall: smaller title text, less left-padding on sections and general margin-pading adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -75,12 +75,18 @@
 
 @media (max-width: 390px) {
     body{
-        width: 132.5% !important;
+        width: 100% !important;
     }
 
     .main-container{
         background-position: 220px;
     }
+
+    .blur-buffer, .blur-buffer-2{
+        height:7em;
+        padding:0;
+    }
+
 
 }
 
