--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -37,6 +37,7 @@
     margin: 0;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -48,7 +49,7 @@
     display: flex;
 }
 
-.scroll-down{
+.scroll-down {
     position: absolute;
     bottom: 2em;
     left: 50%;
@@ -62,11 +63,24 @@
     z-index: 2;
 }
 
-/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed 
-@media only screen and (max-device-width: 1366px) {
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed*/
+@media only screen and (max-device-width: 990px) {
     .parallax {
-      background-attachment: scroll;
+        background-attachment: scroll;
     }
-  }
-*/
+}
 
+@media (max-width: 390px){
+    .hero{
+        padding-left: 2em;
+    }
+
+    .hero h1{
+        font-size: 3.5em;
+    }
+
+    .scroll-down{
+        width:3em;
+    }
+
+}
